Most divs were replaced with different elements in the HTML file and absolute measurements were replaced with relative measurements in the CSS file

--- a/index.html
+++ b/index.html
@@ -11,59 +11,92 @@
     <header>
         <div class="fixed-header">
             <div><img class="logo" src=./images/AdFin-logo.jpg alt="AdFin logo"/></div>
-                <div class="links">
-                    <a href="#" class="nav-link">Home</a>
-                    <a href="#" class="nav-link">Products</a>
-                    <a href="#" class="nav-link">Contact Us</a>
-                </div>
+                <nav class="links">
+                    <a href="#">Home</a>
+                    <a href="#">Products</a>
+                    <a href="#">Contact Us</a>
+                </nav>
         </div>
     </header>
-    <div class="content">
-        <div class="row hero">
-            <div class="hero-detail">
-                <h1>Learn from the best</h1>
-                <p>Whether it's a bull or bear market, with AdFin you'll have the best financial advice to keep ahead of the game.</p>
-                <button type="button">Learn more</button>
-            </div>
-            <div class="hero-image">
-                <img src=./images/Client-financial-advisor-vector.jpg alt="project management image"/>
-            </div>
-        </div>
-        <div class="info-block">
-            <div class="info-title">This is why you should choose AdFin</div>
-            <div class="row info-items">
-                <div class="info-item">
-                    <div> <img class="info-item-image" src=./images/experts.jpg alt="financial experts vector icon"/></div>
-                    <div class="info-item-text">We have a team of highly-qualified financial experts with decades of experience.</div>
+    <main>
+        <div class="content">
+            <section class="row hero">
+                <div class="hero-detail">
+                    <h1>Learn from the best</h1>
+                    <p>Whether it's a bull or bear market, with AdFin you'll have the best financial advice to keep ahead of the game.</p>
+                    <button type="button">Learn more</button>
                 </div>
-                <div class="info-item">
-                    <div> <img class="info-item-image" src=./images/trust.jpg alt="shaking hands vector icon"/></div>
-                    <div class="info-item-text">Our investment advice is trusted by more than 2M people across Europe.</div>
+                <picture class="hero-image">
+                    <img src=./images/Client-financial-advisor-vector.jpg alt="project management image"/>
+                </picture>
+            </section>
+            <section class="info-block">
+                <div class="info-title">
+                    <h2>This is why you should choose AdFin</h2>
                 </div>
-                <div class="info-item">
-                    <div> <img class="info-item-image" src=./images/confidentiality.jpg alt="confidentiality vector icon"/></div>
-                    <div class="info-item-text">We treat all your financial information with the utmost confidentiality.</div>
+                <div class="row info-items">
+                    <div class="info-item">
+                        <figure>
+                            </picture> 
+                                <img class="info-item-image" src=./images/experts.jpg alt="financial experts vector icon"/>
+                            </picture>
+                        <figcaption class="info-item-text">
+                            <p>We have a team of highly-qualified financial experts with decades of experience.</p>
+                        </figcaption>
+                        </figure>
+                    </div>
+                    <div class="info-item">
+                        <figure>
+                            <picture>
+                                <img class="info-item-image" src=./images/trust.jpg alt="shaking hands vector icon"/>
+                            </picture>
+                        <figcaption class="info-item-text">
+                            <p>Our investment advice is trusted by more than 2M people across Europe.</p>
+                        </figcaption>
+                        </figure>
+                    </div>
+                    <div class="info-item">
+                        <figure>
+                            <picture>
+                                <img class="info-item-image" src=./images/confidentiality.jpg alt="confidentiality vector icon"/>
+                            </picture>
+                            <figcaption class="info-item-text">
+                                <p>We treat all your financial information with the utmost confidentiality.</p>
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="info-item">
+                        <figure>
+                            <picture>
+                                <img class="info-item-image" src=./images/data.jpg alt="data-driven insights vector icon"/>
+                            </picture>
+                            <figcaption class="info-item-text">
+                                <p>We rely on data-driven insights when making decisions that will affect your money.</p>
+                            </figcaption>
+                        </figure>
+                    </div>
                 </div>
-                <div class="info-item">
-                    <div> <img class="info-item-image" src=./images/data.jpg alt="data-driven insights vector icon"/></div>
-                    <div class="info-item-text">We rely on data-driven insights when making decisions that will affect your money.</div>
+            </section> 
+            <section class="row quote-block">
+                <span>
+                    <blockquote class="quote-block-text">"AdFin has transformed my financial outlook. Their personalised approach, expert advice, and transparent communication have empowered me to make confident investment decisions. Thanks to their guidance, my portfolio has thrived, surpassing my expectations. I highly recommend their services."</blockquote>
+                    <div class="quote-block-author"><p><em>-David Mosely</em></p>
+                </span>
+            </section> 
+            <section class="row action">
+                <div class="action-detail">
+                    <span>
+                        <div class="action-detail-title">Sign up for a free assessment call</div>
+                        <div class="action-detail-description">Get a free 15-minute assessment call from one of our experts today!</div>
+                    </span>
                 </div>
-            </div>
-        </div> 
-        <div class="row quote-block">
-            <div class="quote-block-text">"AdFin has transformed my financial outlook. Their personalised approach, expert advice, and transparent communication have empowered me to make confident investment decisions. Thanks to their guidance, my portfolio has thrived, surpassing my expectations. I highly recommend their services."</div>
-            <div class="quote-block-author">-David Mosely</div>
-        </div> 
-        <div class="row detail">
-            <div class="action-detail">
-                <div class="action-detail-title">Sign up for a free assessment call</div>
-                <div class="action-detail-description">Get a free 15-minute assessment call from one of our experts today!</div>
-            </div>
-            <button type="button">Call me!</button>
-        </div>
+                <button type="button">Call me!</button>
+            </section>
+    </main>
+    <footer>
         <div class="fixed-footer">
-            <div class="container">Copyright ©</div>
+        <div class="container">Copyright ©</div>
         </div>
-    </div>  
+    </footer>
 </body>
 </html>
